<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bbc"
            android:icon="@drawable/bbc"
            android:menuCategory="secondary"
            android:title="@string/bbc" />
        <item
            android:id="@+id/aljazeer"
            android:icon="@drawable/aljazeera"
            android:menuCategory="secondary"
            android:title="@string/aljazera" />
        <item
            android:id="@+id/cnn"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/cnn" />
        <item
            android:id="@+id/fox_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/fox_news" />
        <item
            android:id="@+id/sky_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:menuCategory="secondary"
            android:title="@string/sky_news" />
    </group>

    <item
        android:id="@+id/New"
        android:menuCategory="secondary"
        android:title="@string/upcoming">
        <menu>
            <item
                android:id="@+id/ny"
                android:icon="@drawable/bbc"
                android:menuCategory="secondary"
                android:title="@string/new_year_times" />
        </menu>

    </item>

</menu>