<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bbc">

    <fragment
        android:id="@+id/bbc"
        android:name="com.example.newsapp.Fragment.BBC.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/aljazeer"
        android:name="com.example.newsapp.Fragment.AlJazeera.GalleryFragment"
        android:label="@string/aljazera"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/cnn"
        android:name="com.example.newsapp.Fragment.CNN.SlideshowFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fox_news"
        android:name="com.example.newsapp.Fragment.foxNewsFragment"
        android:label="@string/fox_news"
        tools:layout="@layout/fragment_fox_news" />
    <fragment
        android:id="@+id/sky_news"
        android:name="com.example.newsapp.Fragment.SkyNewsFragment"
        android:label="@string/sky_news"
        tools:layout="@layout/fragment_sky_news" />
</navigation>